--- a/genius-homework-2/css/styles.css
+++ b/genius-homework-2/css/styles.css
@@ -3,7 +3,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url("/genius-homework-2/Fonts/roboto-v30-latin-regular.woff2")
+  src: url("./Fonts/roboto-v30-latin-regular.woff2")
     format("woff2");
 }
 
@@ -12,7 +12,7 @@
   font-family: "Play";
   font-style: normal;
   font-weight: 400;
-  src: url("/genius-homework-2/Fonts/play-v19-latin-regular.woff2")
+  src: url("./Fonts/play-v19-latin-regular.woff2")
     format("woff2");
 }
 
@@ -21,7 +21,7 @@
   font-family: "Play";
   font-style: normal;
   font-weight: 700;
-  src: url("/genius-homework-2/Fonts/play-v19-latin-700.woff2") format("woff2");
+  src: url("./Fonts/play-v19-latin-700.woff2") format("woff2");
 }
 
 :root {
