--- a/genius-homework-2/css/styles.css
+++ b/genius-homework-2/css/styles.css
@@ -3,8 +3,7 @@
   font-family: "Roboto";
   font-style: normal;
   font-weight: 400;
-  src: url("/genius-homework-2/Fonts/roboto-v30-latin-regular.woff2")
-    format("woff2");
+  src: url("../Fonts/roboto-v30-latin-regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -12,8 +11,7 @@
   font-family: "Play";
   font-style: normal;
   font-weight: 400;
-  src: url("/genius-homework-2/Fonts/play-v19-latin-regular.woff2")
-    format("woff2");
+  src: url("../Fonts/play-v19-latin-regular.woff2") format("woff2");
 }
 
 @font-face {
@@ -21,7 +19,7 @@
   font-family: "Play";
   font-style: normal;
   font-weight: 700;
-  src: url("/genius-homework-2/Fonts/play-v19-latin-700.woff2") format("woff2");
+  src: url("../Fonts/play-v19-latin-700.woff2") format("woff2");
 }
 
 :root {
@@ -63,7 +61,7 @@ address {
   font-style: normal;
 }
 .main-background {
-  background-image: url(/genius-homework-2/images/background-big.png);
+  background-image: url(../images/background-big.png);
   background-repeat: no-repeat;
   background-position: top;
 }
@@ -99,7 +97,7 @@ address {
 .container.header-container {
 }
 .background {
-  background-image: url(/genius-homework-2/images/background.png);
+  background-image: url(../images/background.png);
   background-repeat: no-repeat;
 }
 .header-nav {
@@ -246,7 +244,7 @@ address {
 .format-card {
   display: flex;
   flex-direction: column;
-  background-color: coral;
+  background-color: var(--color-background);
   border-radius: 32px;
   box-shadow: 0px 4px 4px 0px rgba(168, 198, 245, 0.38);
   padding: 24px 32px;
@@ -419,7 +417,7 @@ address {
   height: 150px;
   bottom: 0;
   right: 0;
-  background-image: url(/genius-homework-2/images/footer-photo-right-bottom.png);
+  background-image: url(../images/footer-photo-right-bottom.png);
   background-repeat: no-repeat;
   content: "";
 }
