--- a/genius-homework-2/css/styles.css
+++ b/genius-homework-2/css/styles.css
@@ -68,7 +68,7 @@ address {
 .section {
   padding-bottom: 96px;
 }
-.section-title.centered {
+.section__title.centered {
   text-align: center;
 }
 .container {
@@ -158,7 +158,7 @@ address {
   gap: 32px;
   padding: 0 100px;
 }
-.section-title.second-title {
+.section__title.second-title {
   margin: 0;
   max-width: 530px;
   width: 100%;
@@ -343,7 +343,7 @@ address {
 .map {
   border-radius: 32px;
 }
-.section-title.last-title {
+.section__title.last-title {
   text-align: center;
 }
 /*Button*/
@@ -376,7 +376,7 @@ address {
   line-height: 0.81;
   text-transform: capitalize;
 }
-.section-title {
+.section__title {
   color: var(--color-primary-dark);
   font-family: Play, sans-serif;
   font-size: 64px;
