--- a/genius-homework-4/scss/layouts/_hero-section.scss
+++ b/genius-homework-4/scss/layouts/_hero-section.scss
@@ -5,7 +5,7 @@
   margin: 0 auto;
   max-width: 1440px;
   &__banner {
-    background-image: url(/genius-homework-4/images/background-mobile.png);
+    background-image: url(../images/background-mobile.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 60% top;
@@ -19,7 +19,7 @@
           rgba(255, 255, 255, 0.2),
           rgba(255, 255, 255, 0)
         ),
-        url(/genius-homework-4/images/bgc-mobile-banner@2x.png);
+        url(../images/bgc-mobile-banner@2x.png);
     }
     @media screen and (min-width: $bp-mobile) {
       //max-width: 1440px;
@@ -37,7 +37,7 @@
     @media screen and (min-width: $bp-desktop) {
       // max-width: 1440px;
       background-position: right top;
-      background-image: url(/genius-homework-4/images/background.png);
+      background-image: url(../images/background.png);
     }
     // @media screen and (min-width: 768px),
     //   (min-device-pixel-ratio: 2),
@@ -48,7 +48,8 @@
     @media screen and (min-width: 768px) and (min-device-pixel-ratio: 2),
       screen and (min-width: 768px) and (min-resolution: 192dpi),
       screen and (min-width: 768px) and (min-resolution: 2dppx) {
-      background-image: url(/genius-homework-4/images/background@2px.png);
+      //background-image: url(../images/background@2px.png);
+      background-image: url(../images/background@2px.png);
     }
   }
   &__container {
